@@ -104,7 +104,8 @@ def normal(vec1: npt.ArrayLike, vec2: npt.ArrayLike) -> npt.NDArray:
     .. versionchanged:: 0.11.0
        Moved into lib.mdamath
     """
-    normal: npt.NDArray = np.cross(vec1, vec2)
+    # TODO: enable typing when https://github.com/python/mypy/issues/11347 done
+    normal: npt.NDArray = np.cross(vec1, vec2)  # type: ignore
     n = norm(normal)
     if n == 0.0:
         return normal  # returns [0,0,0] instead of [nan,nan,nan]
@@ -171,7 +172,8 @@ def stp(vec1: npt.ArrayLike, vec2: npt.ArrayLike, vec3: npt.ArrayLike) -> float:
     .. versionchanged:: 0.11.0
        Moved into lib.mdamath
     """
-    return np.dot(vec3, np.cross(vec1, vec2))
+    # TODO: enable typing when https://github.com/python/mypy/issues/11347 done
+    return np.dot(vec3, np.cross(vec1, vec2))  # type: ignore
 
 
 def dihedral(ab: npt.ArrayLike, bc: npt.ArrayLike, cd: npt.ArrayLike) -> float:
