@@ -25,6 +25,9 @@ Fixes
 Enhancements
 
 Changes
+  * As per NEP29 the minimum supported version has been raised to 1.22. We
+    have opted to pin to a minimum of 1.22.3 to avoid known issues on some
+    platforms.
   * GSD is no longer a core dependency of MDAnalysis. It must be installed
     independently if you wish to read HOOMD trajectory files.
     (PR #4174, Issue #3819)
